# penguin

./: .buildinfo  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  LICENSE  LICENSES  README.md  StateTreeFilter.py  bugfind.py  build  build.sh  collect_cov.py  coverage.py  crawl.py  crawl2.py  crawl_fs.py  crawl_utils.py  dev  faildetect.py  fetch_all_deps.sh  flake.nix  genindex.html  get_local_packages.sh  get_release.sh  health.py  index.html  introspect.py  modules.html  mychange.patch  nix-dev.sh  objects.inv  package.sh  pandacrawl.py  patch  penguin  (+148 more)
.doctrees/: environment.pickle  index.doctree  modules.doctree  penguin.abi_info.doctree  penguin.analyses.doctree  penguin.arch.doctree  penguin.arch_registry.doctree  penguin.boot_env.doctree  penguin.common.doctree  penguin.compose.doctree  penguin.config_patchers.doctree  penguin.defaults.doctree  penguin.doctree  penguin.dropin_compile.doctree  penguin.gen_config.doctree  penguin.gen_image.doctree  penguin.graphs.doctree  penguin.init_plugin.doctree  penguin.init_runner.doctree  penguin.manager.doctree  penguin.penguin_config.doctree  penguin.penguin_config.errors.doctree  penguin.penguin_config.gen_docs.doctree  penguin.penguin_config.structure.doctree  penguin.penguin_config.templating.doctree  penguin.penguin_config.versions.doctree  penguin.penguin_config.versions.v2.doctree  penguin.penguin_prep.doctree  penguin.penguin_run.doctree  pengutils.doctree  (+101 more)
db/: setup.cfg
db/events/: __init__.py  base.py  types.py
db/events/utils/: __init__.py  cli_execs.py  cli_fds.py  cli_index.py  cli_reads.py  cli_syscalls.py  cli_tasks.py  cli_writes.py  util_base.py
penguin/: README.md  setup.cfg
penguin/penguin/: __init__.py  __main__.py  analyses.py  defaults.py  graphs.py  manager.py  mygraph.py  penguin_bb_profile.py  penguin_config.py  penguin_manager.py  penguin_prep.py  penguin_rerun_manager.py  penguin_run.py  penguin_static.py  penguinanalysis.py  utils.py
penguin/penguin/resources/static_keys/: dsa2048.pem  make_keys.sh  openssl_x509_2048.key  openssl_x509_4096.key  openssl_x509_4096.pem  ssh.dsa
penguin/penguin/scripts/: makeImage.sh
penguin/resources/: config_schema.yaml  init.sh
penguin/resources/static_keys/: dsaparam.pem  ecdsa_prime256v1.pem  rsa2048.pem  rsa4096.pem  ssh.dsa.pub  ssh.ecdsa  ssh.ecdsa.pub  ssh.ed25519.pub
penguin/scripts/: makeImage.sh
pengutils/: pyproject.toml  setup.cfg
pengutils/pengutils/: __init__.py  base.py  types.py
pengutils/pengutils/events/: __init__.py  types.py
pengutils/pengutils/utils/: __init__.py  cli_breakpoint.py  cli_db.py  cli_execs.py  cli_fds.py  cli_guest_cmd.py  cli_load_plugin.py  cli_pengutils.py  cli_plugins.py  cli_reads.py  cli_snapshot.py  cli_syscall.py  cli_syscalls.py  cli_tasks.py  cli_uprobe.py  cli_writes.py  pengutils.py  util_base.py  util_events.py
pengutils/tests/: test_events.py  test_util_events.py
src/: mk-igloo-static.nix  mk-penguin-qemu.nix  pyproject.toml  setup.cfg  setup.py
src/penguin/: __init__.py  __main__.py  __main__.py.bak  abi_info.py  analyses.py  arch.py  arch_registry.py  boot_env.py  busybox_generator.py  common.py  compose.py  config_patchers.py  db.py  debug.py  defaults.py  dropin_compile.py  fs_utils.py  gen_config.py  gen_image.py  genetic.py  graph_search.py  graphs.py  init_plugin.py  init_runner.py  kvm_qemu.py  llm.py  manager.py  patch_minimizer.py  patch_search.py  penguin_bb_profile.py  penguin_config.py  penguin_prep.py  penguin_run.py  penguin_static.py  plugin_manager.py  q_config.py  run_summary.py  search_utils.py  static_analyses.py  static_plugin.py  (+4 more)
src/penguin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/penguin/config_patchers/: __init__.py  base_patch.py  delete_files.py  dynamic_exploration.py  force_www.py  generate_missing_dirs.py  generate_missing_files.py  generate_referenced_dirs.py  generate_shell_mounts.py  kernel_modules.py  libinject_fixed_aliases.py  libinject_string_introspection.py  libinject_symlinks.py  libinject_tailored_aliases.py  linksys_hack.py  manual_interact.py  netdevs_default.py  netdevs_tailored.py  nvram_config_recovery.py  nvram_config_recovery_wild.py  nvram_defaults.py  nvram_firmae_file_specific.py  nvram_helper.py  nvram_library_recovery.py  patch_generator.py  pseudofiles_expert.py  pseudofiles_tailored.py  root_shell.py  shim_binaries.py  shim_busybox.py  shim_crypto.py  shim_fw_env.py  shim_no_modules.py  shim_stop_bins.py  single_shot.py  single_shot_ficd.py
src/penguin/helpers/: file_helper.py  filesystem_helper.py  tar_helper.py
src/penguin/mcp/: README.md  __init__.py  diagnostics.py  mutations.py  server.py
src/penguin/penguin_config/: __init__.py  errors.py  gen_docs.py  structure.py  templating.py
src/penguin/penguin_config/versions/: __init__.py  v2.py  v3.py
src/penguin/static_analyses/: __init__.py  arch_id.py  base.py  cluster_collector.py  env_finder.py  filesystem_helper.py  init_finder.py  interface_finder.py  kernel_version_finder.py  library_symbols.py  pseudofile_finder.py
src/penguin/testing/: __init__.py  gen_hyper_enums.py  harness.py  hyper_enums.json
src/resources/: banner.sh  config_schema.yaml  default_settings.yaml  doc_format.yaml  init.sh  ltrace_nvram.conf  penguin_install  penguin_install.local  preinit.sh  proc_sys.txt  testinit.sh  user_settings.yaml
src/resources/penguest/: __init__.py  vsock.py
src/resources/source.d/: 02_setup_module.sh  10_setup_mounts.sh  11_coredump_filter.sh  11_setup_env.sh  20_populate_nvram.sh  30_seed_random.sh  40_adjust_coredumps.sh  40_mount_shared_dir.sh  40_setup_coredump.sh  45_guest_compat.sh  50_launch_root_shell.sh  55_force_www.sh  60_launch_vpn.sh  70_make_devs.sh  80_add_dummy_nics.sh  85_external_net.sh  90_enable_strace.sh
src/resources/static_keys/: make_keys.sh  openssl_1024.key  openssl_1024.pem  openssl_2048.key  openssl_2048.pem  openssl_4096.key  openssl_4096.pem  openssl_x509_1024.key  openssl_x509_1024.pem  openssl_x509_2048.pem  ssh.ed25519  ssh.rsa  ssh.rsa.pub  ssh.rsa1  ssh.rsa1.pub
(+869 files in other folders)
