[metadata]
name =events
author = MIT Lincoln Laboratory
author_email = andrew.fasano@ll.mit.edu
version = 0.1
description = IGLOO Events Database 
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
url = https://github.com/panda-re/igloo
keywords = igloo
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    sqlalchemy
    rich

[options.entry_points]
console_scripts =
    execs = events.utils.cli_execs:query_execs
    fds = events.utils.cli_fds:query_fds
    reads = events.utils.cli_reads:query_reads
    syscalls = events.utils.cli_syscalls:query_syscalls
    tasks = events.utils.cli_tasks:query_tasks
    writes = events.utils.cli_writes:query_writes

