[metadata]
name = penguin
author = MIT Lincoln Laboratory
author_email = andrew.fasano@ll.mit.edu
version = 0.1
description = Automated IGLOO rehosting
long_description_content_type = text/markdown
long_description = file:README.md
license = MIT
license_files =
    LICENSE
url = https://github.com/panda-re/igloo
keywords = igloo
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    pyyaml
    jsonschema

[options.entry_points]
console_scripts =
    penguin = penguin.__main__:penguin_entry
    new =penguin.__main__:penguin_new_entry
    penguin_new = penguin.__main__:penguin_new_entry
    run = penguin.__main__:penguin_run_entry
    penguin_run = penguin.__main__:penguin_run_entry
    explore = penguin.__main__:penguin_explore_entry
    penguin_explore = penguin.__main__:penguin_explore_entry
    penguin_mgr = penguin.manager:penguin_mgr_entry

[options.package_data]
penguin = scripts/*.sh, resources/*
