[metadata]
name = pengutils
author = MIT Lincoln Laboratory
author_email = luke.craig@mit.edu
version = 0.1
description = IGLOO Events Database 
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
url = https://github.com/panda-re/igloo
keywords = igloo
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    sqlalchemy
    rich

[options.entry_points]
console_scripts =
    execs = pengutils.utils.cli_execs:query_execs
    fds = pengutils.utils.cli_fds:query_fds
    reads = pengutils.utils.cli_reads:query_reads
    syscalls = pengutils.utils.cli_syscalls:query_syscalls
    tasks = pengutils.utils.cli_tasks:query_tasks
    writes = pengutils.utils.cli_writes:query_writes
    uprobe = pengutils.utils.cli_uprobe:uprobe
    load_plugin = pengutils.utils.cli_load_plugin:load_plugin
    breakpoint = pengutils.utils.cli_breakpoint:breakpoint_cli
    pengutils = pengutils.utils.cli_pengutils:main
    guest_cmd = pengutils.utils.cli_guest_cmd:guest_cmd
