[metadata]
name = pengutils
author = MIT Lincoln Laboratory
author_email = luke.craig@mit.edu
version = 0.1
description = Pengutils plugins and utilities for IGLOO
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
url = https://github.com/rehosting/penguin
keywords = igloo
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    sqlalchemy
    rich

[options.entry_points]
console_scripts =
    breakpoint = pengutils.utils.cli_breakpoint:breakpoint_cli
    pengutils = pengutils.utils.cli_pengutils:main
    guest_cmd = pengutils.utils.cli_guest_cmd:guest_cmd
    db = pengutils.utils.cli_db:db_cli
    plugins = pengutils.utils.cli_plugins:plugins